# laboratoryWork_4

task1/: CMakeLists.txt  task1.c
task2/: CMakeLists.txt  task2.c
task3/: CMakeLists.txt  task3.c
task4/: task4.c
task5/: task5.c
task6/: CMakeLists.txt  func.h  main.c  task1_6.c  task2_6.c  task3_6.c  task4_6.c  task5_6.c
