# CMakeList.txt: проект CMake для laboratoryWork_4; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

# Добавьте источник в исполняемый файл этого проекта.
add_executable (laboratoryWork_4_task6 "main.c" "task1_6.c" "task2_6.c" "task3_6.c" "task4_6.c" "task5_6.c" "func.h")

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
